Text is overlapping on the cloud options
Issue-ID: ACUMOS-3655.

Acu Compose: Deploy to Cloud: Text is overlapping on the cloud options

Change-Id: Ic7997fa978b2cb2cb631ef9b6f3722815c168a79
Signed-off-by: Sachin Kanase <SK00500818@TechMahindra.com>
(cherry picked from commit 8cae4ceea57f77475559c51966663d0cedd1bd31)

--- a/acumos-portal-fe/src/main/webapp/app/acu-compose/acu-compose.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/acu-compose/acu-compose.template.html
@@ -220,7 +220,7 @@ limitations under the License.
 							<span class="addnew"></span> New
 						</button>
 					</span>
-					<div class="ds-btn-container">
+					<div class="ds-btn-container acu-compose">
 						<div class="probe-container">
 							<label>Probe:</label>
 							<input ng-model="myCheckbox" type="checkbox" name="probe" ng-change='setProbe(myCheckbox)' ng-disabled='checkboxDisable' ng-class="checkboxDisable?'inputCheckDisabled':''">
