fix for Export/Deploy to Cloud tiles issue
Change-Id: I1875da7ec2cebe0aef38fd180b20477de26ef0aa
ISSUE-ID: ACUMOS-3671
Description: <IST><Portal Marketplace>Manage My Model > Export/Deploy to Cloud: Page title issues.
Signed-off-by: BelagamSrividya <BS00561090@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -929,7 +929,7 @@ limitations under the License.
 				<h2 ng-show="exportTo=='azure'">Deploying to Microsoft Azure</h2>
 				<h2 ng-show="exportTo=='rackspace'">Deploying to RackSpace</h2>
 				<h2 ng-show="exportTo=='K8S'">Deploying to K8S</h2>
-				<h2 ng-show="exportTo=='deploylocal'">Deploying to Local</h2>
+				<h2 ng-show="exportTo=='deploylocal'">Deploying to local</h2>
 				<h2 ng-show="exportTo=='whitebox'">Deploying to White Box</h2>
 				<span flex></span>
 				<md-button class="md-icon-button" ng-click="handleDismiss()">
