--- a/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
@@ -2358,7 +2358,7 @@ limitations under the License.
 												Azure</h2>
 											<h2 ng-show="checkboxExport=='rackspace'">Deploy to RackSpace</h2>
 											<h2 ng-show="checkboxExport=='K8S'">Deploy to K8S</h2>
-											<h2 ng-show="checkboxExport=='deploylocal'">Deploy to Local</h2>
+											<h2 ng-show="checkboxExport=='deploylocal'">Deploy to local</h2>
 											<h2 ng-show="checkboxExport=='whitebox'">Deploy to White Box</h2>
 											<span flex></span>
 											<md-button class="md-icon-button" ng-click='closePoup()'>
