--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -401,7 +401,7 @@ limitations under the License.
 																		      <md-radio-button value="selectLicProfile" ng-if="allTemplates"> Select License Profile </md-radio-button>
 																		    </md-radio-group>
 																		    <b>OR</b>
-																		    <button id="create-new-button" ng-click="createNewLicenseProfileTemplate($event, false)"					
+																		    <button id="create-new-button" ng-click="createNewLicenseProfileTemplate($event, false); selectedLicense = -2;"					
 																				class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Create New License" title="Create New License">
 																				Create New</button>
 																		    </div>
