Added check for clicking enter request
Issue-ID: ACUMOS-3702.
Description: <IST> <Web Onboarding>On-board dockerized model : Model
searching not working on hitting Enter key.

Change-Id: I78b2d02d0c5d7bd49ed531fff96f497bb6aa8996
Signed-off-by: Sovit <SS00507275@TechMahindra.com>
(cherry picked from commit fa5067903c2bde590a5653a42523acd357f2d417)

--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -902,7 +902,7 @@ limitations under the License.
 										   	   <div class="mdl-cell--8-col mdl-cell--5-col-tablet mdl-cell--4-col-phone">
 										   	   		<label>Select Model	</label>
 													<div class="search-select">
-														<input name="modelList" id="modelList" list="solutions" type="text" ng-class="{'disable-input':artifactUrl}" ng-disabled="artifactUrl" placeholder="Search By Model Name" ng-model="searchModel" class="mdl-textfield__input onboard-new-docker">
+														<input name="modelList" id="modelList" list="solutions" type="text" ng-class="{'disable-input':artifactUrl}" ng-disabled="artifactUrl" placeholder="Search By Model Name" ng-model="searchModel" class="mdl-textfield__input onboard-new-docker" ng-enter="checkModelName(searchModel, 'relatedSearch')" >
 														<span class="search-icon cursor-pointer" ng-click="checkModelName(searchModel, 'relatedSearch')"></span>
 													</div>
 													<datalist id="solutions">
