Selection fix for on-boarding dockerized URI model
Issue-ID: ACUMOS-3719
Description:  Selection fix for on-boarding dockerized URI model

Change-Id: I9f3b29a4d0b0d409a21725360a249b0788662984
Signed-off-by: Shaik Ghannubee <SG00587246@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -782,7 +782,7 @@ limitations under the License.
 										On-board Model</button>
 										<button type="reset" 
 										 ng-disabled= "!(stepfailed == true || allSuccess == true) || (disableDockerRefreshButton == true)" 
-										 ng-click="resetDockerURLForm()"
+										 ng-click="resetDockerURLForm(); licenseOption = 'Upload'"
 										class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Add to Catalog" title="Add to Catalog">
 											Upload New</button>
 								</div>
