Show company name for federated models
Federated models with valid licenses will now display the name of the
company supplying the model as opposed to the author or owner names.

Issue-Id: ACUMOS-3697
Change-Id: I378d2fde18348819b4ef83b01d4200498dc338e3
Signed-off-by: swood8 <SW0C74397@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/market_place/market-place.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/market_place/market-place.template.html
@@ -199,9 +199,9 @@ limitations under the License.
 													<div class="mpdetailscontainer">
 													    <label class="griditem-title">{{mlsolution.name}}</label>
 													    
-													    <label class="grid-item-text-container"><span class="griditem-text2 grid-item-lbl" ng-if="!mlsolution.sourceId"
-													    ng-bind=" ((mlsolution.authors.length > 0) ? mlsolution.authors[0].name : mlsolution.ownerName)"></span><span class="griditem-text2 grid-item-lbl" ng-if="mlsolution.sourceId"
-													    ng-bind="mlsolution.mPeer.name"></span> | <span class="griditem-text2">  {{ mlsolution.modified || mlsolution.created | date:"MM/dd/yyyy"}}</span> | <span class="text-xsmall link-orange" ng-if="mlsolution.active != ''">New</span></label>
+													    <label class="grid-item-text-container"><span class="griditem-text2 grid-item-lbl"
+													    ng-bind=" ((mlsolution.companyName) ? mlsolution.companyName : (mlsolution.authors.length > 0) ? mlsolution.authors[0].name : mlsolution.ownerName)">
+													    </span> | <span class="griditem-text2">  {{ mlsolution.modified || mlsolution.created | date:"MM/dd/yyyy"}}</span> | <span class="text-xsmall link-orange" ng-if="mlsolution.active != ''">New</span></label>
 													</div>
 													
 													<div class="tile-icons">
