--- a/acumos-portal-fe/src/main/webapp/app/publish-request/md-publish-request.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/publish-request/md-publish-request.template.html
@@ -141,7 +141,7 @@ limitations under the License.
 				<tbody><!-- (filtertedUser = (allPublishRequest | orderBy:orderByField:reverseSortPbReq | filter : search) ) -->
 
 					<tr ng-repeat="publishReq in allPublishRequest | orderBy:orderByField:reverseSortPbReq | filter : searchPublishRequest as allPublishRequestFiltered">
-						<td ng-class="{'disabled': publishReq.requestStatusName !== 'Pending'}"><a ui-sref="marketSolutions({solutionId:publishReq.solutionId,revisionId:publishReq.revisionId,publishRequestId:publishReq.publishRequestId,requestUserId:publishReq.requestUserId,requestStatusCode:publishReq.requestStatusCode})"><label class="model-name">{{publishReq.solutionName}}</label></a>
+						<td ng-class="{'disabled': publishReq.requestStatusName !== 'Pending'}"><a ui-sref="marketSolutions({solutionId:publishReq.solutionId,revisionId:publishReq.revisionId,publishRequestId:publishReq.publishRequestId,requestUserId:publishReq.requestUserId,requestStatusCode:publishReq.requestStatusCode,catalogId:publishReq.catalogId,catalogName:publishReq.catalogName})"><label class="model-name">{{publishReq.solutionName}}</label></a>
 							<label class="small">{{publishReq.solutionId}}</label></td>
 						<td ng-class="{'disabled': publishReq.requestStatusName !== 'Pending'}"><label>{{publishReq.revisionName}}</label> <label
 							class="small">Revision ID: {{publishReq.revisionId}}</label></td>
