fix for publish request count
Change-Id: I6075380080fbc3b841f791cf6e63daa4211fced4
ISSUE-ID: ACUMOS-3638
Description: As a publisher not able to approve publication requests for Models in a restricted catalog
Signed-off-by: BelagamSrividya <BS00561090@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/publish-request/md-publish-request.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/publish-request/md-publish-request.template.html
@@ -46,7 +46,7 @@ limitations under the License.
 		<div class="fed-row1 publishheading" ng-init="allPublishRequestLength = 0">
 			<div class="fedrow-cell1">
 				<span class="font600">Current Request </span> <span>({{allPublishRequestLength}}
-					active request)</span>
+					active/Inactive requests)</span>
 			</div>
 			<div class="fed-row2">
 				<div class="fed-srch-container">
