Tile change to Deploy to local
Change-Id: I87249938fbf0dbcd69d4a4ded36745335db915c1
ISSUE-ID: ACUMOS-3790
Description: <IST><Portal Marketplace> Model Details: Deploy to Local window tile is not consistent.
Signed-off-by: Shaik Ghannubee <SG00587246@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -926,11 +926,11 @@ limitations under the License.
 			<md-toolbar>
 			<div class="md-toolbar-tools">
 			<!-- cloudName should match to the model value -->
-				<h2 ng-show="exportTo=='azure'">Deploying to Microsoft Azure</h2>
-				<h2 ng-show="exportTo=='rackspace'">Deploying to RackSpace</h2>
-				<h2 ng-show="exportTo=='K8S'">Deploying to K8S</h2>
-				<h2 ng-show="exportTo=='deploylocal'">Deploying to local</h2>
-				<h2 ng-show="exportTo=='whitebox'">Deploying to White Box</h2>
+				<h2 ng-show="exportTo=='azure'">Deploy to Microsoft Azure</h2>
+				<h2 ng-show="exportTo=='rackspace'">Deploy to RackSpace</h2>
+				<h2 ng-show="exportTo=='K8S'">Deploy to K8S</h2>
+				<h2 ng-show="exportTo=='deploylocal'">Deploy to local</h2>
+				<h2 ng-show="exportTo=='whitebox'">Deploy to White Box</h2>
 				<span flex></span>
 				<md-button class="md-icon-button" ng-click="handleDismiss()">
 				<i class="material-icons">close</i> </md-button>
