--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -429,7 +429,7 @@ limitations under the License.
 											<i class="fa fa-download" aria-hidden="true"></i>
 										</md-button>
 									
-										<md-button ng-cloak ng-if="loginUserID"  ng-disabled="value.mask" class="mdl-button mdl-js-button btn-grid-action" ng-click="downloadArtifact(value.artifactId)">
+										<md-button ng-cloak ng-if="loginUserID"  ng-disabled="value.mask" class="mdl-button mdl-js-button btn-grid-action" ng-click="downloadArtifact(value.artifactId,value.artifactType)">
 											<i class="fa fa-download" aria-hidden="true"></i>
 										</md-button>
 
@@ -1248,7 +1248,7 @@ limitations under the License.
 							<label class="downloadlbl2"><span class="font600">Uploaded
 							on</span> - {{value.created | date:'MM/dd/yyyy'}}</label>
 					</div>
-					<md-button class="mdl-button mdl-js-button btn-primary" ng-disabled="value.mask" ng-click="downloadArtifact(value.artifactId)">
+					<md-button class="mdl-button mdl-js-button btn-primary" ng-disabled="value.mask" ng-click="downloadArtifact(value.artifactId,value.artifactType)">
 						Download
 					</md-button>
 				</div>
