--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -604,7 +604,7 @@ limitations under the License.
 													<label>Model Name </label>
 													<input type="text" name="modelDockerURLName" ng-model="modelDockerURLName" required ng-blur="modelNameDVisited=true" ng-focus="modelNameDVisited=false">
 													<div class="help-inline validation-msgs"
-														ng-class="{validationmsg:!dockerUrlForm.modelDockerURLName.$valid}">
+														ng-class="{validationmsg:!dockerUrlForm.modelDockerURLName.$valid && dockerUrlForm.modelDockerURLName.$touched }">
 														<span ng-show="( !!dockerUrlForm.modelDockerURLName.$error.required && dockerUrlForm.modelDockerURLName.$touched && modelNameDVisited)">Model
 															Name Required.</span>
 													</div>																			
@@ -618,7 +618,7 @@ limitations under the License.
 										            <label for="input_32">Host</label> 
 										            <input type="text" class="md-input" id="input_32" ng-model="host" name="host" required ng-blur="hostVisited=true" ng-focus="hostVisited=false">
 										            <div class="help-inline validation-msgs"
-														ng-class="{validationmsg:!dockerUrlForm.host.$valid}">
+														ng-class="{validationmsg:!dockerUrlForm.host.$valid && dockerUrlForm.host.$touched}">
 														<span ng-show="( !!dockerUrlForm.host.$error.required && dockerUrlForm.host.$touched && hostVisited)">Host Required.</span>
 													</div>
 										         </md-input-container>
@@ -629,7 +629,7 @@ limitations under the License.
 										            <label for="input_32">Port</label> 
 										            <input type="text" class="md-input" id="input_32" name="port" ng-model="port" ng-pattern="/^([0-9]{1,4}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$/" required ng-blur="portVisited=true" ng-focus="portVisited=false">
 										            <div class="help-inline validation-msgs"
-														ng-class="{validationmsg:!dockerUrlForm.port.$valid}">
+														ng-class="{validationmsg:!dockerUrlForm.port.$valid && dockerUrlForm.port.$touched}">
 														<span ng-show="( !!dockerUrlForm.port.$error.required && dockerUrlForm.port.$touched && portVisited)">
 															Port Required.</span>
 														<span ng-show="( !!dockerUrlForm.port.$error.pattern && dockerUrlForm.port.$touched && portVisited)">
@@ -645,7 +645,7 @@ limitations under the License.
 										            <label for="input_32">Image</label> 
 										            <input type="text" class="md-input" id="input_32" ng-model="image" name="image" required ng-blur="imageVisited=true" ng-focus="imageVisited=false">
 										            <div class="help-inline validation-msgs"
-														ng-class="{validationmsg:!dockerUrlForm.image.$valid}">
+														ng-class="{validationmsg:!dockerUrlForm.image.$valid && dockerUrlForm.image.$touched}">
 														<span ng-show="( !!dockerUrlForm.image.$error.required && dockerUrlForm.image.$touched && imageVisited)">Image Required.</span>
 													</div>
 										         </md-input-container>
@@ -777,7 +777,7 @@ limitations under the License.
 								
 								<div class="onboardbtn">
 									<button ng-click="addToCatalog(true)"
-										 ng-disabled= "modelDocLicUploadError || !host || !image || !port || !modelDockerURLName || ( disableOnboardingButton == true )"
+										 ng-disabled= "modelDocLicUploadError || !host || !image || !port || !modelDockerURLName || ( disableOnboardingButton == true ) || !disableDockerRefreshButton"
 										class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Add to Catalog" title="Add to Catalog">
 										On-board Model</button>
 										<button type="reset" 
