--- a/acumos-portal-fe/src/main/webapp/index.html
+++ b/acumos-portal-fe/src/main/webapp/index.html
@@ -103,6 +103,8 @@ limitations under the License.
 
 <link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="css/validation.css">
+<link rel="stylesheet" href="css/jquery.dataTables.min.css">
+<link rel="stylesheet" href="css/angular-datatables.css">
 
 <script type="text/javascript" src="app/acu-compose/js/d3.js"></script>
 <script type="text/javascript" src="app/acu-compose/js/crossfilter.js"></script>
@@ -135,8 +137,9 @@ limitations under the License.
 <script src="app/resources/jquery.min.js"></script>
 <script type="text/javascript" src="app/acu-compose/js/jquery.js"></script>
 <script type="text/javascript" src="app/acu-compose/js/jquery-ui.js"></script>
-<script type="text/javascript"
-	src="app/acu-compose/js/jqueryui-editable.js"></script>
+<script type="text/javascript" src="app/acu-compose/js/jqueryui-editable.js"></script>
+<script src="app/resources/jquery.dataTables.js""></script>
+
 <script src="app/resources/angular.min.js"></script>
 <script src="app/resources/angular-animate.min.js"></script>
 <script src="app/resources/angular-aria.min.js"></script>
@@ -147,6 +150,7 @@ limitations under the License.
 <script src="app/resources/angular-base64-upload.js"></script>
 <script src="app/resources/bootstrap.min.js"></script>
 <script src="app/resources/xeditable.min.js"></script>
+<script src="app/resources/angular-datatables.min.js"></script>
 
 </head>
 <body>
