display format should be consistent
Change-Id: I038c8311703178ab0494189249ee7016e8cc8eb8
Issue-Id: ACUMOS-3850
Description: Page headers/ Menu names display format should be consistent
Signed-off-by: mcapraful <PD00618320@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -442,7 +442,7 @@ limitations under the License.
 					</div>
 					
 					<div class="mdl-tabs__panel" id="tab6-panel">
-						<h6 class="sectiontitle6">Author/Publisher Details</h6>
+						<h6 class="sectiontitle6">AUTHOR/PUBLISHER DETAILS</h6>
 						<table class="mdl-data-table mdl-js-data-table md-tbl1">
 							<colgroup>
 								<col />
