--- a/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
@@ -1957,7 +1957,7 @@ limitations under the License.
 																				</table>
 																			</div>
 																			<div class="mdl-tabs__panel" id="tab4-panel">
-																				<h6 class="sectiontitle6">Model Artifacts</h6>
+																				<h6 class="sectiontitle6">MODEL ARTIFACTS</h6>
 																				<table
 																					class="mdl-data-table mdl-js-data-table md-tbl1">
 																					<colgroup>
@@ -1998,7 +1998,7 @@ limitations under the License.
 																					</tbody>
 																				</table>
 																			</div>
-																			<div class="mdl-tabs__panel" id="tab5-panel"><h6 class="sectiontitle6">Author/Publisher Details</h6>
+																			<div class="mdl-tabs__panel" id="tab5-panel"><h6 class="sectiontitle6">AUTHOR/PUBLISHER DETAILS</h6>
 																				<table class="mdl-data-table mdl-js-data-table md-tbl1">
 																					<colgroup>
 																						<col />
