--- a/acumos-portal-fe/src/main/webapp/app/Admin/create-role.html
+++ b/acumos-portal-fe/src/main/webapp/app/Admin/create-role.html
@@ -20,22 +20,22 @@
 		 			
 			<div class="admin-row1 select-control">
 				<span class='md-required'></span>
-				<md-select ng-model="permissions" placeholder="select" class="md-no-underline admin-ddl admin-change-role-ddl" multiple="">
+				<md-select ng-model="permissions" placeholder="select" class="md-no-underline admin-ddl admin-change-role-ddl" multiple="" ng-change="checkAllPermission(permissions)">
 					<div>
 						<div class="custom-dropdown-all"> 
 						<md-checkbox ng-model="allPermisions" ng-true="true" ng-click="allPermissionsSelected(allPermisions)"> All</md-checkbox>
 						</div>
-					<md-option value="{{val.value}}" ng-repeat='val in permissionList' ng-selected="val.selected">{{val.permission}}</md-option>
+					<md-option value="{{val.value}}" ng-repeat='val in permissionList' ng-selected="val.selected"  >{{val.permission}}</md-option>
 					</div>
 				</md-select>				
 			</div>
 			<br/> 
 			<div class="admin-button-row1"><span>Catalog Permission <sup class="reqfield">*</sup></span></div>
 				<div class="user-detail-container">
-					<md-checkbox class="catalog-item" ng-value="true" ng-model="selectAllCatalogs" ng-click="checkAllRoles(!selectAllCatalogs)"><strong> Select All </strong></md-checkbox>
+					<md-checkbox class="catalog-item" ng-model="selectAllCatalogs" ng-click="checkAllRoles(!selectAllCatalogs)"><strong> Select All </strong></md-checkbox>
 					<div class="catalogs-list-container"  ng-repeat="(key,catalogGroup) in allCatalogList">
 						<div class="sectiontitle6 fullwidth"><label ><span class="md-subhead ">{{key}}</span></label></div>
-						<md-checkbox class="catalog-item" ng-model="catalog.checked" ng-click="toggleCatalogSelection(catalog.catalogId)" ng-repeat="catalog in catalogGroup" ng-value="true" title="{{catalog.name}}"> {{catalog.name}}</md-checkbox>
+						<md-checkbox class="catalog-item" ng-model="catalog.checked"  ng-click="toggleCatalogSelection(catalog.catalogId)" ng-repeat="catalog in catalogGroup" ng-value="true" title="{{catalog.name}}"> {{catalog.name}}</md-checkbox>
 					</div>
 				</div>
 			</div>
