Create new role UI fixes
Isuue-ID: ACUMOS-3864, ACUMOS-3873, ACUMOS-3874, ACUMOS-3870,
ACUMOS-3869, ACUMOS-3871, ACUMOS-3867
Description: Create new role UI fixes

Change-Id: I8d38ed00f3c27e118fbf51580a45020d61885344
Signed-off-by: Shaik Ghannubee <SG00587246@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/Admin/create-role.html
+++ b/acumos-portal-fe/src/main/webapp/app/Admin/create-role.html
@@ -17,6 +17,7 @@
 				</div>
 			</div>
 			<div class="font600 admin-button-row1">User Permission</div>	
+			<div class="admin-button-row1"><span>Module Permissions <sup class="reqfield">*</sup></span></div>
 		 			
 			<div class="admin-row1 select-control">
 				<span class='md-required'></span>
